TODO:
    improve joinwav()
    improve error()
    get rid of cryptographp.cfg.php (use config.php directly)

Version 1beta2 - released 2012-04-22
cmb	fixed buggy requirement check
cmb	extended copyright to 2012
cmb	changed usage of original cryptographp: instead of using it as library it's now fully integrated
cmb	fixed cryptographps local file inclusion bug
cmb	implemented audio captcha
cmb	removed config options char_case_sensitive and crypt_secure
cmb	moved cryptographp config to config/
cmb	added alt attributes for captcha and buttons
cmb	added plugin icon
cmb	allowed multiple idependent instances (removed crypt_use_max and crypt_one_use)
cmb	integrated error.php to cryptographp.php
cmb	added warning, if cookies are disabled
cmb	made crypt_use_timer_error a boolean config option
cmb	updated the manual
cmb	moved the updating of the configuration to index.php
cmb	implemented expiration of CAPTCHAs
cmb	added slovak translation (provided by Tata)
cmb	added czech translation (provided by oldnema)
cmb	made several minor improvements

Version 1beta1 - released 2011-09-19
cmb	initial release